修复重复创建fragment的bug

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -23,13 +23,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:background="@color/status_bar_color"
-                app:popupTheme="@style/AppTheme.PopupOverlay">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="热门"
-                    android:textSize="16sp"/>
+                app:popupTheme="@style/AppTheme.PopupOverlay"
+                app:title="订阅">
 
             </android.support.v7.widget.Toolbar>
 
