--- a/app/src/main/res/layout/fragment_subscribe.xml
+++ b/app/src/main/res/layout/fragment_subscribe.xml
@@ -2,12 +2,14 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+             xmlns:banner="http://schemas.android.com/apk/res-auto"
              tools:context=".ui.fragment.SubscribeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.rex.hwong.ui.widget.SimpleImageBanner
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="subscribe"/>
+        android:layout_height="wrap_content"
+        banner:bb_delay="2"
+        banner:bb_period="2"
+        banner:bb_scale="0.5625"/>
 
 </FrameLayout>
